--- a/Source/OxyPlot/OxyPlot.csproj
+++ b/Source/OxyPlot/OxyPlot.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Manipulators\PanManipulator.cs" />
     <Compile Include="Manipulators\TrackerHitResult.cs" />
     <Compile Include="PlotModel\HitTestResult.cs" />
+    <Compile Include="Series\BarSeries\BarItem.cs" />
     <Compile Include="Series\BoxPlotItem.cs" />
     <Compile Include="Series\BoxPlotSeries.cs" />
     <Compile Include="Series\IDataPointProvider.cs" />
