--- a/Source/Examples/ExampleLibrary/ExampleLibrarySL.csproj
+++ b/Source/Examples/ExampleLibrary/ExampleLibrarySL.csproj
@@ -99,6 +99,9 @@
       <Name>OxyPlotSL</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Bergensbanen.csv" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
