--- a/Source/Examples/ExampleLibrary/ExampleLibrarySL.csproj
+++ b/Source/Examples/ExampleLibrary/ExampleLibrarySL.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Examples\BarSeries\BarAndColumnSeriesExamples.cs" />
     <Compile Include="Examples\BarSeries\BarSeriesExamples.cs" />
     <Compile Include="Examples\BarSeries\ColumnSeriesExamples.cs" />
+    <Compile Include="Examples\BarSeries\ErrorColumnSeriesExamples.cs" />
     <Compile Include="Examples\BoxPlotSeriesExamples.cs" />
     <Compile Include="Examples\CartesianAxesExamples.cs" />
     <Compile Include="Examples\CategoryAxisExamples.cs" />
