Corrected code analysis warnings (CA1060, CA1063, CA1401, CA2101, CA2202)
SvgExporter: added a parameter for a text measurement IRenderContext
- can avoid native methods when using this.

PlotModel: corrected 'padding' bug when vertical axis was not defined

--- a/Source/OxyPlot/OxyPlotM.csproj
+++ b/Source/OxyPlot/OxyPlotM.csproj
@@ -183,7 +183,7 @@
     <Compile Include="Series\PieSeries.cs" />
     <Compile Include="Series\FunctionSeries.cs" />
     <Compile Include="Series\PieSlice.cs" />
-    <Compile Include="Svg\Gdi32.cs" />
+    <Compile Include="Svg\NativeMethods.cs" />
     <Compile Include="Svg\SvgRenderContext.cs" />
     <Compile Include="Svg\SvgWriter.cs" />
     <Compile Include="Foundation\OxyColor.cs" />
