--- a/Source/Examples/WPF/WorldStatisticsDemo/WorldStatisticsDemo.csproj
+++ b/Source/Examples/WPF/WorldStatisticsDemo/WorldStatisticsDemo.csproj
@@ -36,8 +36,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PropertyTools">
+      <HintPath>..\..\..\packages\PropertyTools.Wpf.2012.2.1.55\lib\PropertyTools.dll</HintPath>
+    </Reference>
     <Reference Include="PropertyTools.Wpf">
-      <HintPath>..\..\..\packages\PropertyTools.Wpf.2011.7.1\lib\PropertyTools.Wpf.dll</HintPath>
+      <HintPath>..\..\..\packages\PropertyTools.Wpf.2012.2.1.55\lib\PropertyTools.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
