--- a/Source/Examples/WPF/ExportDemo/packages.config
+++ b/Source/Examples/WPF/ExportDemo/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="PropertyTools.Wpf" version="2011.7.1" />
-  <package id="Caliburn.Micro" version="1.2.0" />
+  <package id="PropertyTools.Wpf" version="2012.2.1.55" />
+  <package id="Caliburn.Micro" version="1.3.1" />
 </packages>
