Added RectangleAnnotation class (with example in the ExampleBrowsers) Added OxyColor ChangeAlpha extension method Added Series class diagram

--- a/Source/OxyPlot.Tests/OxyPlot.Tests.csproj
+++ b/Source/OxyPlot.Tests/OxyPlot.Tests.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Axes\AxisTests.cs" />
+    <Compile Include="Foundation\OxyColorExtensionsTests.cs" />
     <Compile Include="Foundation\ListFillerTests.cs" />
     <Compile Include="OxyAssert.cs" />
     <Compile Include="TestModels.cs" />
