ExampleLibrary (PCL): changed compiler directive from "METRO" to "PCL"

--- a/Source/Examples/ExampleLibrary/ExampleLibraryPCL.csproj
+++ b/Source/Examples/ExampleLibrary/ExampleLibraryPCL.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{FACB89E5-53A5-4748-9F5B-E0714EBB37B2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ExampleLibraryPCL</RootNamespace>
-    <AssemblyName>ExampleLibraryPCL</AssemblyName>
+    <RootNamespace>ExampleLibrary</RootNamespace>
+    <AssemblyName>ExampleLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile7</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -26,8 +26,8 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE;METRO</DefineConstants>
+    <OutputPath>bin\NET45\Release\</OutputPath>
+    <DefineConstants>TRACE;PCL</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
