--- a/Source/Examples/Metro/ExampleBrowser/ExampleBrowser.csproj
+++ b/Source/Examples/Metro/ExampleBrowser/ExampleBrowser.csproj
@@ -89,7 +89,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
-    <OutputPath>..\..\..\..\Output\WINRT\Examples\Metro\ExampleBrowserBasic\</OutputPath>
+    <OutputPath>..\..\..\..\Output\NetCore45\Examples\Metro\ExampleBrowserBasic\</OutputPath>
     <DefineConstants>TRACE;NETFX_CORE</DefineConstants>
     <Optimize>true</Optimize>
     <NoWarn>;2008</NoWarn>
