Corrected Metro/Silverlight build errors.

--- a/Source/Examples/ExampleLibrary/ExampleLibrary_PCL.csproj
+++ b/Source/Examples/ExampleLibrary/ExampleLibrary_PCL.csproj
@@ -19,7 +19,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\PCL\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;METRO</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;PCL</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
