OxyPlot.Metro: implemented pointer (mouse) events

--- a/Source/Examples/Metro/BasicSample/BasicSample.csproj
+++ b/Source/Examples/Metro/BasicSample/BasicSample.csproj
@@ -111,6 +111,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
