--- a/Source/Examples/ExampleLibrary/ExampleLibrary_PCL.csproj
+++ b/Source/Examples/ExampleLibrary/ExampleLibrary_PCL.csproj
@@ -39,6 +39,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Attributes\ExampleAttribute.cs" />
     <Compile Include="CustomSeries\ErrorItem.cs" />
     <Compile Include="CustomSeries\LineSegmentSeries.cs" />
